--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -10,23 +10,23 @@
     <p><a href="index.html">Go back</a></p>
 
     <input type="text" id="datetime-picker" />
-    <button type="button" data-start>Start</button>
+    <button type="button" class="start-js" data-start>Start</button>
 
     <div class="timer">
       <div class="field">
-        <span class="value" data-days>00</span>
+        <span class="value days-js" data-days>00</span>
         <span class="label">Days</span>
       </div>
       <div class="field">
-        <span class="value" data-hours>00</span>
+        <span class="value hours-js" data-hours>00</span>
         <span class="label">Hours</span>
       </div>
       <div class="field">
-        <span class="value" data-minutes>00</span>
+        <span class="value minutes-js" data-minutes>00</span>
         <span class="label">Minutes</span>
       </div>
       <div class="field">
-        <span class="value" data-seconds>00</span>
+        <span class="value seconds-js" data-seconds>00</span>
         <span class="label">Seconds</span>
       </div>
     </div>
