--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -12,15 +12,15 @@
     <form class="form">
       <label>
         First delay (ms)
-        <input type="number" name="delay" required />
+        <input class="delay-js" type="number" name="delay" required />
       </label>
       <label>
         Delay step (ms)
-        <input type="number" name="step" required />
+        <input class="step-js" type="number" name="step" required />
       </label>
       <label>
         Amount
-        <input type="number" name="amount" required />
+        <input class="amount" type="number" name="amount" required />
       </label>
       <button type="submit" class="creatBtn">Create promises</button>
     </form>
