--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -20,7 +20,7 @@
       </label>
       <label>
         Amount
-        <input class="amount" type="number" name="amount" required />
+        <input class="amount-js" type="number" name="amount" required />
       </label>
       <button type="submit" class="creatBtn">Create promises</button>
     </form>
