--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -12,17 +12,17 @@
     <form class="form">
       <label>
         First delay (ms)
-        <input class="delay-js" type="number" name="delay" required />
+        <input type="number" name="delay" required />
       </label>
       <label>
         Delay step (ms)
-        <input class="step-js" type="number" name="step" required />
+        <input type="number" name="step" required />
       </label>
       <label>
         Amount
-        <input class="amount-js" type="number" name="amount" required />
+        <input type="number" name="amount" required />
       </label>
-      <button type="submit" class="creatBtn">Create promises</button>
+      <button type="submit" class="bt">Create promises</button>
     </form>
 
     <script src="js/03-promises.js" type="module"></script>
