--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -12,15 +12,15 @@
     <form class="form">
       <label>
         First delay (ms)
-        <input type="number" name="delay" required />
+        <input type="number" name="delay" class="delay_js" required />
       </label>
       <label>
         Delay step (ms)
-        <input type="number" name="step" required />
+        <input type="number" name="step" class="step_js" required />
       </label>
       <label>
         Amount
-        <input type="number" name="amount" required />
+        <input type="number" name="amount" class="amount_js" required />
       </label>
       <button type="submit" class="bt">Create promises</button>
     </form>
